// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse style-only expression 1`] = `
"const props = {
  \\"className\\": \\"props_4o0\\"
};
Styles.include(\`
	.props_4o0 { color: red }
\`);"
`;

exports[`collapse style-only expression 2`] = `
"const props = {
  \\"className\\": \\"props_4o0\\"
};
Styles.include(\`
	.props_4o0 { color: red }
\`);"
`;

exports[`pass SpreadElement-do to element 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"foo_754\\"
});

Styles.include(\`
	.foo_754 { background: blue; color: red }
\`);"
`;

exports[`pass SpreadElement-do to element 2`] = `
"() => <div className=\\"foo_754\\" />;

Styles.include(\`
	.foo_754 { background: blue; color: red }
\`);"
`;
